// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App at / 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-3"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-4 makeStyles-Select-5 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-1 makeStyles-Offset-2"
  />
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <bdi
      dir="auto"
    >
      $100.00
    </bdi>
  </p>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    <bdi
      dir="auto"
    >
      Jul 27, 2019
    </bdi>
     
    <bdi
      dir="auto"
    >
      9:00:00 AM
    </bdi>
  </p>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Set the clock
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="MuiFormControl-root MuiTextField-root"
  >
    <div
      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
    >
      <input
        aria-invalid="false"
        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
        type="text"
        value=""
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
      />
      <fieldset
        aria-hidden="true"
        class="PrivateNotchedOutline-root-8 MuiOutlinedInput-notchedOutline"
        style="padding-left: 8px;"
      >
        <legend
          class="PrivateNotchedOutline-legend-9"
          style="width: 0.01px;"
        >
          <span>
            ​
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`App at /chess 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-14"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-15 makeStyles-Select-16 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-12 makeStyles-Offset-13"
  />
  <table
    class="ChessboardTable"
    dir="ltr"
  >
    <tbody>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
      </tr>
      <tr>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square Black"
          />
        </td>
        <td
          class="ChessboardTd"
        >
          <div
            class="makeStyles-Square-19 Square White"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`App at /clock 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-23"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-24 makeStyles-Select-25 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-21 makeStyles-Offset-22"
  />
  <canvas
    class="makeStyles-Canvas-28 makeStyles-Canvas-29"
    height="400"
    width="400"
  />
</div>
`;

exports[`App at /counter 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-32"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-33 makeStyles-Select-34 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-30 makeStyles-Offset-31"
  />
  <div>
    <span
      class="MuiTypography-root MuiTypography-body1"
    >
      0
    </span>
    <div
      class="MuiButtonGroup-root"
      role="group"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            Reset
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            +
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            -
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        data-testid="incrementIfOddButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            + if odd
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButtonGroup-grouped MuiButtonGroup-groupedHorizontal MuiButtonGroup-groupedOutlined MuiButtonGroup-groupedOutlinedHorizontal MuiButtonGroup-groupedOutlined"
        data-testid="incrementAsyncButton"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          <bdi
            dir="auto"
          >
            + in 1 second
          </bdi>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`App at /form-controls 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-39"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-40 makeStyles-Select-41 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-37 makeStyles-Offset-38"
  />
  <ul
    class="MuiList-root MuiList-padding"
  >
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <label
            class="MuiFormLabel-root FileUpload Safari"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined Button"
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <bdi
                  dir="auto"
                >
                  Browse…
                </bdi>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
            <bdi
              dir="auto"
            >
              No file selected.
            </bdi>
            <input
              accept="image/*"
              class="Input"
              multiple=""
              type="file"
            />
          </label>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiFormControl-root MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              label
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
              >
                <span
                  class=""
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        style="transform: scaleY(-1);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 5H1v16c0 1.1.9 2 2 2h16v-2H3V5zm18-4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 16H7V3h14v14z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-44 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-46"
                >
                  <span>
                    label
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiFormControl-root MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              label
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-44 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-46"
                >
                  <span>
                    label
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="MuiFormControl-root MuiTextField-root"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
              data-shrink="false"
            >
              label
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                type="text"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
              >
                <span
                  class=""
                >
                  <button
                    class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                    disabled=""
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        style="transform: scaleY(-1);"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M3 5H1v16c0 1.1.9 2 2 2h16v-2H3V5zm18-4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 16H7V3h14v14z"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-44 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-46"
                >
                  <span>
                    label
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
        </span>
      </div>
    </li>
    <li
      class="MuiListItem-root MuiListItem-gutters"
    >
      <div
        class="MuiListItemText-root"
      >
        <span
          class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          <div
            class="Container"
          >
            <pre
              class="makeStyles-Pre-48 makeStyles-Pre-50 Pre"
            />
            <div
              class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                data-shrink="false"
              >
                code
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd"
              >
                <textarea
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline makeStyles-TextArea-49 TextArea MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  rows="1"
                  spellcheck="false"
                  style="height: 0px; overflow: hidden;"
                />
                <textarea
                  aria-hidden="true"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline makeStyles-TextArea-49 TextArea MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd"
                  readonly=""
                  style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); width: 100%;"
                  tabindex="-1"
                />
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd"
                >
                  <span
                    class=""
                  >
                    <button
                      class="MuiButtonBase-root MuiIconButton-root Mui-disabled Mui-disabled"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          style="transform: scaleY(-1);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M3 5H1v16c0 1.1.9 2 2 2h16v-2H3V5zm18-4H7c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2zm0 16H7V3h14v14z"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </div>
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-44 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-46"
                  >
                    <span>
                      code
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`App at /info 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-53"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-54 makeStyles-Select-55 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-51 makeStyles-Offset-52"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Fetch data
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <p
    class="MuiTypography-root MuiTypography-body1"
  >
    Fetching not started.
  </p>
</div>
`;

exports[`App at /nonexistent-path 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-89"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-90 makeStyles-Select-91 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-87 makeStyles-Offset-88"
  />
  Error: No route matches /nonexistent-path.
</div>
`;

exports[`App at /paint 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-60"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-61 makeStyles-Select-62 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-58 makeStyles-Offset-59"
  />
  <canvas
    class="makeStyles-Canvas-65 makeStyles-Canvas-66 Canvas"
    height="320"
    width="320"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Clear
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="MuiToggleButtonGroup-root MuiToggleButtonGroup-vertical"
    role="group"
  >
    <button
      aria-pressed="true"
      class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-selected"
      tabindex="0"
      type="button"
      value="pen"
    >
      <span
        class="MuiToggleButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-pressed="false"
      class="MuiButtonBase-root MuiToggleButton-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedVertical Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
      value="bucket"
    >
      <span
        class="MuiToggleButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.56 8.94L7.62 0 6.21 1.41l2.38 2.38-5.15 5.15c-.59.59-.59 1.54 0 2.12l5.5 5.5c.29.29.68.44 1.06.44s.77-.15 1.06-.44l5.5-5.5c.59-.58.59-1.53 0-2.12zM5.21 10L10 5.21 14.79 10H5.21zM19 11.5s-2 2.17-2 3.5c0 1.1.9 2 2 2s2-.9 2-2c0-1.33-2-3.5-2-3.5z"
          />
          <path
            d="M0 20h24v4H0z"
            fill-opacity=".36"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root"
    >
      line cap
    </label>
    <div
      class="MuiFormGroup-root"
      role="radiogroup"
    >
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-67 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-70"
              name="lineCap"
              type="radio"
              value="butt"
            />
            <div
              class="PrivateRadioButtonIcon-root-71"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-72"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          butt
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-67 MuiRadio-root MuiRadio-colorSecondary PrivateSwitchBase-checked-68 Mui-checked MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input-70"
              name="lineCap"
              type="radio"
              value="round"
            />
            <div
              class="PrivateRadioButtonIcon-root-71 PrivateRadioButtonIcon-checked-73"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-72"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          round
        </span>
      </label>
      <label
        class="MuiFormControlLabel-root"
      >
        <span
          aria-disabled="false"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-67 MuiRadio-root MuiRadio-colorSecondary MuiIconButton-colorSecondary"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-70"
              name="lineCap"
              type="radio"
              value="square"
            />
            <div
              class="PrivateRadioButtonIcon-root-71"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                />
              </svg>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root PrivateRadioButtonIcon-layer-72"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                />
              </svg>
            </div>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
        >
          square
        </span>
      </label>
    </div>
  </div>
  <div
    class="MuiBox-root MuiBox-root-74"
  >
    <ul
      class="MuiList-root MuiList-padding"
    >
      <li
        class="MuiListItem-root MuiListItem-gutters"
      >
        <div
          class="MuiListItemText-root"
        >
          <span
            class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom"
            >
              <bdi
                dir="auto"
              >
                Brush size
              </bdi>
            </p>
            <span
              class="MuiSlider-root MuiSlider-colorPrimary"
            >
              <span
                class="MuiSlider-rail"
              />
              <span
                class="MuiSlider-track"
                style="left: 0%; width: 9.090909090909092%;"
              />
              <input
                type="hidden"
                value="10"
              />
              <span
                aria-orientation="horizontal"
                aria-valuemax="100"
                aria-valuemin="1"
                aria-valuenow="10"
                class="MuiSlider-thumb MuiSlider-thumbColorPrimary"
                data-index="0"
                role="slider"
                style="left: 9.090909090909092%;"
                tabindex="0"
              />
            </span>
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`App at /reminder 1`] = `
<div>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <button
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-edgeStart"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Spacer"
      />
      <div
        class="MuiBox-root MuiBox-root-82"
      >
        <span
          class="TooltipWrapper"
        >
          <button
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </span>
      </div>
      <div
        class="MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root LocaleSelectLabel InputLabel MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-filled MuiFormLabel-filled"
          data-shrink="true"
          for="00000000-0000-4000-0000-000000000000"
        >
          <bdi
            dir="auto"
          >
            Language
          </bdi>
        </label>
        <div
          class="MuiInputBase-root MuiFilledInput-root MuiFilledInput-underline LocaleSelectInput MuiInputBase-formControl"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby="00000000-0000-4000-0000-000000000000"
            class="MuiSelect-root MuiSelect-select makeStyles-Select-83 makeStyles-Select-84 Select MuiSelect-selectMenu MuiSelect-filled MuiInputBase-input MuiFilledInput-input"
            id="00000000-0000-4000-0000-000000000000"
            role="button"
            tabindex="0"
          >
            English
          </div>
          <input
            aria-hidden="true"
            class="MuiSelect-nativeInput"
            data-testid="localeSelect"
            tabindex="-1"
            value="en"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSelect-icon LocaleSelectSelectIcon MuiSelect-iconFilled"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </header>
  <div
    class="makeStyles-Offset-80 makeStyles-Offset-81"
  />
  <ul
    class="MuiList-root MuiList-padding"
  />
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <bdi
        dir="auto"
      >
        Add
      </bdi>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
